# tana-runtime

./: .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  TODO.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  mprocs.yaml  package.json
contracts/: README.md  compile.sh  package.json  tsconfig.json
contracts/blockchain/: get.ts
contracts/modules/: get.ts
contracts/test/: get.js  post.js  post.ts
docs/: CONTRACT_EXECUTION.md  DATA_STORAGE.md  DEPLOYMENT.md  FEATURE_PARITY.md  MOBILE_AUTH_IMPLEMENTATION_PLAN.md  MOBILE_AUTH_PROTOCOL.md  PLAYGROUND_SECURITY.md  STORAGE_IMPLEMENTATION.md  STORAGE_QUICKSTART.md  SYSTEM_OVERVIEW.md
examples/: README.md  batch-query.ts  default.ts  runtime-test.ts  simple-transfer.ts
ledger/: README.md  package.json
ledger/src/: index.ts
ledger/src/accounts/: users.ts
ledger/src/api/: schemas.ts
ledger/src/balances/: index.ts
ledger/src/db/: schema.ts
ledger/src/transactions/: index.ts
node/: README.md  package.json
runtime/: BLOCK_TX_IMPLEMENTATION.md  Cargo.toml  README.md  build.rs  example.js  tana-globals.ts  test-fetch.ts  test-storage.ts
runtime/src/: lib.rs  main.rs
scripts/: run-contract.ts
tana-edge/: BENCHMARKING.md  Cargo.toml  PERFORMANCE.md  bench.sh  counter-test.ts  example.ts  quick-bench.sh
tana-edge/contracts/test/: get.ts
tana-edge/examples/: counter-contract.ts
tana-edge/src/: main.rs
website/: astro.config.mjs  wrangler.jsonc
website/public/: _headers
website/src/: defaultCode.ts
website/src/components/: Editor.svelte  StateViewer.svelte
websites/docs/: astro.config.mjs
(+12 files in other folders)
