[package]
name = "tana-edge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "tana-edge"
path = "src/main.rs"

[dependencies]
deno_core = "0.338"
deno_error = "0.5.7"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }